--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>J'ai dit que j'avais faim</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -33,7 +34,17 @@
   <img class="fiona" width="20%" src="images/fiona.png">
   <img class="shrek" width="40%" src="images/shrek.jpg">
 
+<div class="card" style="width: 18rem;">
+  <img src="images/barbe.jpg" width="1%" class="card-img-top" >
+  <div class="card-body">
+    <h5 class="card-title">Info sur la barbe</h5>
+    <p class="card-text">voici quelques infos sur la barbe</p>
+    <a href="#" class="btn btn-primary">allez ici</a>
+  </div>
 </div>
+
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10499.767781898156!2d2.351144741482275!3d48.8593174185997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e03cdce4ae9%3A0x38cfa580446f9e46!2sLe%20Marais%2C%20Paris!5e0!3m2!1sfr!2sfr!4v1632735760598!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
 
 </body>
